# bech32-utils

./: .gitignore  Cargo.toml  README.md
bech32-addr-converter/: Cargo.toml  README.md
bech32-addr-converter-cli/: Cargo.toml  README.md
bech32-addr-converter-cli/src/: main.rs
bech32-addr-converter/src/: converter.rs
src/: converter.rs  lib.rs  main.rs
