[package]
name = "bech32-addr-converter-cli"
edition = "2021"
version = "1.0.1"
description = "A convenient CLI for converting Bech32 addresses with different prefixes."
license = "MIT OR Apache-2.0"
repository = "https://github.com/mbbrainz/bech32-utils"
readme = "README.md"
keywords = ["bech32", "cli", "address-conversion"]
categories = ["command-line-utilities", "cryptography", "utilities"]

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
csv = "1.3.0"
bech32-addr-converter = { version = "1.0.1", path = "../bech32-addr-converter" }

[[bin]]
name = "bech32-addr-converter"
path = "src/main.rs"

[profile.release]
# Optimize for maximum performance
opt-level = 3

# Use link time optimization
lto = true

# Strip symbols for a smaller binary
strip = true

# More aggressive inlining
codegen-units = 1

# Disable debug information
debug = false

panic = "abort"
